--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Example App</title>
-  <link rel="stylesheet" type="text/css" href="main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 
 <body>
