--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Example App</title>
+  <title>Alphadev Inside</title>
   <link rel="stylesheet" href="main.css" />
 </head>
 
