Add empty partials and include in home

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,2 +1,7 @@
-<div>{{bodyText}}</div>
-<img width="350" src="leon.jpg" />
+{{> cover }}
+{{> one_of_us }}
+{{> the_family }}
+{{> customers }}
+{{> gallery }}
+{{> timeline }}
+{{> travel }}
