Add fonts and colors

--- a/assets/styles/base/base.styl
+++ b/assets/styles/base/base.styl
@@ -1,4 +1,8 @@
 body {
-  background-color: grey;
-  color: #da9926;
+  background-color: white;
+
+  font-family: 'Montserrat Light';
+  font-size: 15px;
+  line-height: 23px;
+  color: purple-darker
 }
