--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -1,3 +1,6 @@
 @import "base.styl";
-@import "header.styl";
+@import "variables.styl";
+@import "fonts.styl";
+@import "headline.styl";
 
+@import "header.styl";
