Add normlize css. Set up files for cover and header

--- a/assets/styles/components/header.styl
+++ b/assets/styles/components/header.styl
@@ -1,3 +1,19 @@
+
 .header {
   color: orange;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.header__nav {
+  text-align: center;
+}
+
+.header__link {
+  display: inline-block;
+  text-transform: uppercase;
+  text-decoration: none;
+  margin: 0 20px;
 }
