--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,31 +1,16 @@
-<header class="main-header" id="main-header">
-    <div class="main-header__wrapper"><img class="main-header__logo" src="public/assets/img/header_logo.svg">
-        <ul class="main-header__list ">
-            <li class="main-header__item">
-                <a href="#cover" class="main-header__link">cover</a>
-            </li>
-            <li class="main-header__item">
-                <a href="#one_of_us" class="main-header__link">one_of_us</a>
-            </li>
-            <li class="main-header__item">
-                <a href="#the_family" class="main-header__link">the_family</a>
-            </li>
-            <li class="main-header__item">
-                <a href="#customers" class="main-header__link">customers</a>
-            </li>
-            <li class="main-header__item">
-                <a href="#gallery" class="main-header__link">gallery</a>
-            </li>
-            <li class="main-header__item">
-                <a href="#timeline" class="main-header__link">timeline</a>
-            </li>
-            <li class="main-header__item">
-                <a href="#travel" class="main-header__link">travel</a>
-            </li>
-        </ul>
-        <div class="main-header__nav-wrapper">
-            <div class="main-header__nav-icon ">
-                <span></span><span></span><span></span><span></span><span></span><span></span></div>
+<header class="header" id="header">
+    <div class="header__wrapper"><img class="header__logo" src="public/assets/img/header_logo.svg">
+        <nav class="header__nav">
+          <a href="#cover" class="header__link"><h4>om oss</h4></a>
+          <a href="#one_of_us" class="header__link"><h4>vi som jobbar här</h4></a>
+          <a href="#the_family" class="header__link"><h4>uppdrag & kunder</h4></a>
+          <a href="#customers" class="header__link"><h4>historik</h4></a>
+          <a href="#gallery" class="header__link"><h4>händelser</h4></a>
+        </nav>
+        <div class="header__nav-wrapper">
+          <div class="header__nav-icon ">
+              <span></span><span></span><span></span><span></span><span></span><span></span>
+            </div>
         </div>
     </div>
 </header>
