--- a/assets/styles/base/base.styl
+++ b/assets/styles/base/base.styl
@@ -4,5 +4,5 @@ body {
   font-family: 'Montserrat Light';
   font-size: 15px;
   line-height: 23px;
-  color: purple-darker
+  color: purple-darker;
 }
