--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -1,6 +1,8 @@
-@import "base.styl";
+@import "normalize.styl";
 @import "variables.styl";
+@import "base.styl";
 @import "fonts.styl";
 @import "headline.styl";
 
 @import "header.styl";
+@import "cover.styl";
