styled on_of_us section

--- a/assets/styles/base/base.styl
+++ b/assets/styles/base/base.styl
@@ -1,8 +1,11 @@
 body {
   background-color: white;
-
   font-family: 'Montserrat Light';
   font-size: 15px;
   line-height: 23px;
   color: purple-darker;
+}
+
+* {
+  box-sizing: border-box;
 }
