--- a/views/partials/one_of_us.hbs
+++ b/views/partials/one_of_us.hbs
@@ -1,3 +1,8 @@
 <div class="one-of-us">
-  HEJ HEJ HEJ
+  <div class="one-of-us__title">
+    <div class="green-triangle"></div>
+    <div class="orange-triangle"></div>
+    <h1 class="headline">{{title}}</h1>
+  </div>
+  <div class="one-of-us__body">{{body}}</div>
 </div>
