App alphadev svg logos. More work on cover

--- a/assets/styles/components/cover.styl
+++ b/assets/styles/components/cover.styl
@@ -1,16 +1,26 @@
 
 .cover {
+  display: flex;
   height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: purple-darker;
 }
 
-.cover__header {
-  
+.cover__inside-svg {
+  width: 300px;
 }
 
-.cover__nav {
-
+.cover__alphadev-svg {
+  width: 600px;
+  margin-bottom: 20px;
 }
 
-.cover__nav-link {
-  display: inline-block;
+.cover__subtext {
+  margin: 0 auto;
+  max-width: 600px;
+  width: 100%;
+  text-align: center;
+  color: white;
 }
