--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,16 +1,17 @@
 <header class="header" id="header">
-    <div class="header__wrapper"><img class="header__logo" src="public/assets/img/header_logo.svg">
-        <nav class="header__nav">
-          <a href="#cover" class="header__link"><h4>om oss</h4></a>
-          <a href="#one_of_us" class="header__link"><h4>vi som jobbar här</h4></a>
-          <a href="#the_family" class="header__link"><h4>uppdrag & kunder</h4></a>
-          <a href="#customers" class="header__link"><h4>historik</h4></a>
-          <a href="#gallery" class="header__link"><h4>händelser</h4></a>
-        </nav>
-        <div class="header__nav-wrapper">
-          <div class="header__nav-icon ">
-              <span></span><span></span><span></span><span></span><span></span><span></span>
-            </div>
-        </div>
+  <div class="header__wrapper">
+    <img class="header__logo" src="/alphadev_logo.svg">
+    <nav class="header__nav">
+      <a href="#cover" class="header__link"><h4>om oss</h4></a>
+      <a href="#one_of_us" class="header__link"><h4>vi som jobbar här</h4></a>
+      <a href="#the_family" class="header__link"><h4>uppdrag & kunder</h4></a>
+      <a href="#customers" class="header__link"><h4>historik</h4></a>
+      <a href="#gallery" class="header__link"><h4>händelser</h4></a>
+    </nav>
+    <div class="header__nav-wrapper">
+      <div class="header__nav-icon ">
+        <span></span><span></span><span></span><span></span><span></span><span></span>
+      </div>
     </div>
+  </div>
 </header>
