--- a/assets/styles/components/header.styl
+++ b/assets/styles/components/header.styl
@@ -1,14 +1,27 @@
 
 .header {
-  color: orange;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
+  height: 100px;
+}
+
+.header__wrapper {
+  padding: 0 100px;
+  margin: 0 auto;
+  display: flex;
+}
+
+.header__logo {
+  width: 200px;
 }
 
 .header__nav {
+  display: inline-block;
   text-align: center;
+  margin-left: 100px;
+  flex: 1 1 100%;
 }
 
 .header__link {
@@ -16,4 +29,6 @@
   text-transform: uppercase;
   text-decoration: none;
   margin: 0 20px;
+  line-height: 100px;
+  color: white;
 }
