--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -2,6 +2,7 @@
 @import "variables.styl";
 @import "base.styl";
 @import "fonts.styl";
+@import "buttons";
 @import "headline.styl";
 @import "header.styl";
 
