--- a/views/partials/one_of_us.hbs
+++ b/views/partials/one_of_us.hbs
@@ -1,8 +1,15 @@
 <div class="one-of-us">
-  <div class="one-of-us__title">
-    <div class="green-triangle"></div>
-    <div class="orange-triangle"></div>
-    <h1 class="headline">{{title}}</h1>
+  <div class="one-of-us__top">
+    <div class="one-of-us__title">
+      <div class="green-triangle"></div>
+      <div class="orange-triangle"></div>
+      <h1 class="headline">{{title}}</h1>
+    </div>
+    <div class="one-of-us__body">{{body}}</div>
   </div>
-  <div class="one-of-us__body">{{body}}</div>
+  <div class="one-of-us__bottom">
+    <a href="http://www.google.se">
+      <span class="orange-btn">BLI EN AV OSS</span>
+    </a>
+  </div>
 </div>
