--- a/assets/styles/components/one-of-us.styl
+++ b/assets/styles/components/one-of-us.styl
@@ -2,9 +2,16 @@
   width: content-width;
   margin: 0 auto;
   padding: 50px 0;
+}
+
+.one-of-us__top {
   display: flex;
   align-items: center;
-  position:relative;
+  margin-bottom: 80px;
+}
+
+.one-of-us__bottom {
+  text-align: center;
 }
 
 .one-of-us__title {
