one-of-us section padding

--- a/assets/styles/components/one-of-us.styl
+++ b/assets/styles/components/one-of-us.styl
@@ -1,7 +1,7 @@
 .one-of-us {
   width: content-width;
   margin: 0 auto;
-  padding: 50px 0;
+  padding: 100px 0 50px;
 }
 
 .one-of-us__top {
@@ -17,7 +17,7 @@
 .one-of-us__title {
   flex: 1 0 44%;
   margin-right: 6%;
-  padding-top: 15px;
+  padding-top: 60px;
   height: 280px;
   position: relative;
   text-align: center;
