--- a/assets/styles/base/variables.styl
+++ b/assets/styles/base/variables.styl
@@ -1,4 +1,3 @@
-
 orange = #da9926
 orange-dark = #e2a84d
 
@@ -13,3 +12,6 @@ green = #7c9f97
 green-dark = #5e8e6d
 
 content-width = 980px;
+
+is_tablet = 768px;
+is_desktop = 1024px;
