--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,7 +1,7 @@
 {{> cover cover }}
 {{> one_of_us one_of_us}}
 {{> the_family }}
-{{> customers }}
+{{> customers customers}}
 {{> gallery }}
 {{> timeline }}
 {{> travel }}
