--- a/views/partials/cover.hbs
+++ b/views/partials/cover.hbs
@@ -1,13 +1,7 @@
 
 <section class="cover">
 
-  <svg class="cover__inside-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 153.44 55.3">
-    <g data-name="Lager 2">
-      <text fill="#fff" data-name="Layer 1" font-family="BrushedTraveler,Brushed Traveler" font-size="31.49" transform="translate(1.57 43.16)">
-        Inside
-      </text>
-    </g>
-  </svg>
+  <img class="cover__inside-svg" src="/inside.svg" alt="inside">
 
   <img class="cover__alphadev-svg" src="/alphadev_logo_white.svg" alt="alphadev">
 
