--- a/views/partials/customers.hbs
+++ b/views/partials/customers.hbs
@@ -1,2 +1,11 @@
-our customers
-<hr>
+
+<section class="customers">
+  <div class="customers__content">
+    <h2>{{title}}</h2>
+    <p>{{text}}</p>
+
+    <ul class="customers__list">
+      <li><img src="" alt=""><li>
+    </ul>
+  </div>
+</section>
