--- a/assets/styles/components/dotstyle-menu.styl
+++ b/assets/styles/components/dotstyle-menu.styl
@@ -6,7 +6,7 @@
 	left: 30px;
 	transform: translateY(-50%);
 
-	@media (min-width: 800px) {
+	@media (min-width: is_tablet) {
 		display: block;
 	}
 }
