--- a/views/partials/customers.hbs
+++ b/views/partials/customers.hbs
@@ -5,7 +5,12 @@
     <p>{{text}}</p>
 
     <ul class="customers__list">
-      <li><img src="" alt=""><li>
+      <li><img src="/companies/hm.png" alt=""></li>
+      <li><img src="/companies/spotify.png" alt=""></li>
+      <li><img src="/companies/nasdaq.png" alt=""></li>
+      <li><img src="/companies/expressen.png" alt=""></li>
+      <li><img src="/companies/klarna.png" alt=""></li>
+      <li><img src="/companies/tre.png" alt=""></li>
     </ul>
   </div>
 </section>
