--- a/assets/styles/components/footer.styl
+++ b/assets/styles/components/footer.styl
@@ -11,6 +11,8 @@
 
 .footer__bottom {
   background-color: green;
+  padding: 40px;
+  color: white;
 }
 
 .footer__title {
@@ -48,6 +50,65 @@
   }  
 }
 
+.contact {
+  width: 320px;
+  margin: 0 auto;
+  text-align: center;
+  font-family: 'Montserrat Medium';
+}
+
+.contact__logo {
+  margin: 0 auto 25px;
+  background-image: url("pratbubbla.svg");
+  background-repeat: no-repeat;
+  height: 49px;
+  width: 45px;
+}
+
+.contact__adress {
+  margin-bottom: 3px;
+}
+
+.contact__info {
+  margin-bottom: 28px;
+}
+
+.contact__info-tel {
+  margin-right: 10px;
+}
+
+.contact__social {
+  a {
+    text-decoration: none;
+  }
+  .social-facebook {
+    background-image: url("facebook.svg");
+    height: 22px;
+    width: 10px;
+    display: inline-block;
+  }
+  .social-twitter {
+    background-image: url("twitter.svg");
+    height: 22px;
+    width: 27px;
+    display: inline-block;
+    margin-right: 20px;
+  }
+  .social-instagram {
+    background-image: url("instagram.svg");
+    height: 22px;
+    width: 22px;
+    display: inline-block;
+    margin-right: 20px;
+  }
+  .social-linkedin {
+    background-image: url("linkedin.svg");
+    height: 22px;
+    width: 23px;
+    display: inline-block;
+    margin-right: 20px;
+  }
+}
 
 circle {
   stroke: orange; 
