--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -22,5 +22,27 @@
       <span class="orange-btn">KONTAKTA OSS</span>
   </div>
   <div class="footer__bottom">
+    <div class="contact">
+      <div class="contact__logo"></div>
+      <div class="contact__adress">{{adress}}</div>
+      <div class="contact__info">
+        <span class="contact__info-tel">{{tel}}</span>
+        <span class="contact__info-mail">{{mail}}</span>
+      </div>
+      <div class="contact__social">
+        <a href="https://www.instagram.com/alphadevsthlm/">
+          <span class="social-instagram"></span>
+        </a>
+        <a href="https://www.linkedin.com/company/alphadev/">
+          <span class="social-linkedin"></span>
+        </a>
+        <a href="https://twitter.com/alphadevsthlm">
+          <span class="social-twitter"></span>
+        </a>
+        <a href="https://www.facebook.com/pages/Alphadev-AB/318200495044855">
+          <span class="social-facebook"></span>
+        </a>
+      </div>
+    </div>
   </div>
 </div>
