Add timeline content

--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -11,4 +11,5 @@
 @import "one-of-us.styl";
 @import "customers.styl";
 @import "the_family.styl";
+@import "timeline.styl";
 @import "footer.styl";
