--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -10,6 +10,7 @@
 @import "dotstyle-menu.styl";
 @import "one-of-us.styl";
 @import "customers.styl";
+@import "gallery.styl";
 @import "the_family.styl";
 @import "timeline.styl";
 @import "footer.styl";
