--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -5,6 +5,7 @@
 @import "buttons";
 @import "headline.styl";
 @import "header.styl";
+@import "arrow.styl";
 
 @import "cover.styl";
 @import "dotstyle-menu.styl";
