--- a/views/partials/timeline.hbs
+++ b/views/partials/timeline.hbs
@@ -6,6 +6,9 @@
         <li>
           <h3>{{this.title}}</h3>
           <p>{{this.text}}</p>
+          <div class="timeline__arrow">
+            <img src="/chevron.svg" alt="">
+          </div>
         </li>
       {{/each}}
     </ul>
