Cleanup header and templates

--- a/views/partials/customers.hbs
+++ b/views/partials/customers.hbs
@@ -1,5 +1,4 @@
-
-<section class="customers">
+<section id="customers" class="customers">
   <div class="customers__content">
     <h2>{{title}}</h2>
     <p>{{text}}</p>
