--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,11 +2,10 @@
   <div class="header__wrapper">
     <img class="header__logo" src="/alphadev_logo.svg">
     <nav class="header__nav">
-      <a href="#one_of_us" class="header__link"><h4>om oss</h4></a>
-      <a href="#the_family" class="header__link"><h4>vi som jobbar här</h4></a>
-      <a href="#customers" class="header__link"><h4>uppdrag & kunder</h4></a>
-      <a href="#gallery" class="header__link"><h4>historik</h4></a>
-      <a href="#timeline" class="header__link"><h4>händelser</h4></a>
+      <a href="#one_of_us" class="header__link"><h4>OM</h4></a>
+      <a href="#family" class="header__link"><h4>VI</h4></a>
+      <a href="#customers" class="header__link"><h4>GÖR</h4></a>
+      <a href="#timeline" class="header__link"><h4>TID</h4></a>
     </nav>
     <div class="header__nav-wrapper">
       <div class="header__nav-icon ">
