--- a/assets/styles/components/header.styl
+++ b/assets/styles/components/header.styl
@@ -14,11 +14,15 @@
 }
 
 .header__logo {
+  height: 100px;
   width: 200px;
 }
 
 .header__nav {
-  display: inline-block;
+  display: none;
+  @media (min-width: is_tablet) {
+    display: inline-block;
+  }
   text-align: center;
   margin-left: 100px;
   flex: 1 1 100%;
@@ -28,7 +32,7 @@
   display: inline-block;
   text-transform: uppercase;
   text-decoration: none;
-  margin: 0 20px;
+  margin: 0 15px;
   line-height: 100px;
   color: white;
 }
