Margin fix for timeline headlines

--- a/assets/styles/components/timeline.styl
+++ b/assets/styles/components/timeline.styl
@@ -7,6 +7,10 @@
   }
 }
 
+.timeline h2 {
+  text-align: center;
+}
+
 .timeline__items {
   list-style-type: none;
   max-width: content-width;
@@ -50,8 +54,8 @@
   }
 }
 
-.timeline h2 {
-  text-align: center;
+.timeline__items h3 {
+  margin-bottom: 0.25em;
 }
 
 .timeline__arrow {
