--- a/assets/styles/components/footer.styl
+++ b/assets/styles/components/footer.styl
@@ -3,7 +3,7 @@
 }
 
 .footer__top {
-  width: content-width;
+  max-width: content-width;
   margin: 0 auto;
   text-align: center;
   padding: 100px 0;
