--- a/assets/styles/components/customers.styl
+++ b/assets/styles/components/customers.styl
@@ -1,6 +1,6 @@
 
 .customers {
-  padding: 60px 30px;
+  padding: 60px 3.125%;
   background-image: url('/triangles/pattern_triangel_gron.svg');
   background-position: top;
   background-repeat: no-repeat;
@@ -24,6 +24,7 @@
   list-style: none;
   display: flex;
   flex-wrap: wrap;
+  padding-left: 0;
 }
 
 .customers__list li {
