--- a/assets/styles/components/gallery.styl
+++ b/assets/styles/components/gallery.styl
@@ -1,5 +1,5 @@
 .gallery {
-  width: content-width;
+  max-width: content-width;
   padding: 100px 0;
   margin: 0 auto;
 }
@@ -27,7 +27,11 @@
 }
 
 .gallery__image {
-  flex: 1 1 25%;
+  flex: 1 1 50%;
+
+  @media (min-width: is_tablet) {
+    flex: 1 1 25%;
+  }
 
   img {
     max-width: 100%;
