--- a/assets/styles/components/one-of-us.styl
+++ b/assets/styles/components/one-of-us.styl
@@ -2,8 +2,9 @@
   margin: 0 auto;
   padding: 100px 3.125% 50px;
   max-width: content-width;
+
   @media (min-width: is_tablet) {
-    padding: 100px 0 50px;
+    padding: 200px 0;
   }
 }
 
