--- a/assets/styles/components/footer.styl
+++ b/assets/styles/components/footer.styl
@@ -106,6 +106,17 @@
 
 .contact__info-tel {
   margin-right: 10px;
+  a {
+    color: white;
+    text-decoration: none;
+  }
+}
+
+.contact__info-mail {
+  a {
+    color: white;
+    text-decoration: none;
+  }
 }
 
 .contact__social {
