--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -29,7 +29,7 @@
       <div class="contact__adress">{{adress}}</div>
       <div class="contact__info">
         <span class="contact__info-tel">{{tel}}</span>
-        <span class="contact__info-mail">{{mail}}</span>
+        <span class="contact__info-mail"><a href="mailto:{{mail}}">{{mail}}</a></span>
       </div>
       <div class="contact__social">
         <a href="https://www.instagram.com/alphadevsthlm/">
