--- a/assets/styles/components/dotstyle-menu.styl
+++ b/assets/styles/components/dotstyle-menu.styl
@@ -83,3 +83,7 @@
 	margin-top: 60px;
 	margin-bottom: 15px;
 }
+
+.dotstyle-menu--scrolled .dotstyle-menu__list-item a {
+	box-shadow: inset 0 0 0 2px rgba(purple-dark, 1);
+}
