--- a/views/partials/dotstyle-menu.hbs
+++ b/views/partials/dotstyle-menu.hbs
@@ -1,18 +1,21 @@
-<div class="dotstyle-menu dotstyle-menu--fillup">
+<div class="dotstyle-menu" id="dot_menu">
   <ul class="dotstyle-menu__list">
-    <li class="dotstyle-menu__list-item dotstyle-menu__list-item--current">
+    <li class="dotstyle-menu__list-item dotstyle-menu__list-item--current" data-scroll>
+      <a href="#cover"><h4>inside alphadev</h4></a>
+    </li>
+    <li class="dotstyle-menu__list-item" data-scroll>
       <a href="#one_of_us"><h4>om oss</h4></a>
     </li>
-    <li class="dotstyle-menu__list-item">
+    <li class="dotstyle-menu__list-item" data-scroll>
       <a href="#the_family"><h4>vi som jobbar här</h4></a>
     </li>
-    <li class="dotstyle-menu__list-item">
+    <li class="dotstyle-menu__list-item" data-scroll>
       <a href="#customers"><h4>uppdrag & kunder</h4></a>
     </li>
-    <li class="dotstyle-menu__list-item">
+    <li class="dotstyle-menu__list-item" data-scroll>
       <a href="#gallery"><h4>historik</h4></a>
     </li>
-    <li class="dotstyle-menu__list-item">
+    <li class="dotstyle-menu__list-item" data-scroll>
       <a href="#timeline"><h4>händelser</h4></a>
     </li>
   </ul>
