Add family member detail view

--- a/assets/styles/components/the_family.styl
+++ b/assets/styles/components/the_family.styl
@@ -4,7 +4,7 @@
 
   &__title {
     text-align: center;
-    margin-bottom: 2em;
+    margin-bottom: 4rem;
   }
   &__center-text {
     text-align: center;
