--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -13,5 +13,6 @@
 @import "customers.styl";
 @import "gallery.styl";
 @import "the_family.styl";
+@import "family_member.styl";
 @import "timeline.styl";
 @import "footer.styl";
