--- a/views/partials/the_family.hbs
+++ b/views/partials/the_family.hbs
@@ -13,6 +13,7 @@
           <h3>{{this.name}}</h3>
           <span>{{this.title}}</span>
         </div>
+        {{> family_member person=this}}
       </div>
     {{/each}}
   </div>
