--- a/views/partials/family_member.hbs
+++ b/views/partials/family_member.hbs
@@ -1,12 +1,18 @@
 <div class="family-member-details family-member-details--hide">
-  <img src="{{person.image}}">
-  <dl>
-    {{#each person.details.questions}}
-      <dt class="family-member-details__question">{{this.q}}</dt>
-      <dd class="family-member-details__answer">{{this.a}}</dd>
-    {{/each}}
-    {{#each person.details.body}}
-      <p>{{this}}</p>
-    {{/each}}
-  </dl>
+  <div class="family-member-details__image-wrapper">
+    <img class="family-member-details__image" src="{{person.image}}">
+  </div>
+  <div class="family-member-details__text">
+    <h3>{{person.name}}</h3>
+    <span>{{person.title}}</span>
+    <dl>
+      {{#each person.details.questions}}
+        <dt class="family-member-details__question">{{this.q}}</dt>
+        <dd class="family-member-details__answer">{{this.a}}</dd>
+      {{/each}}
+      {{#each person.details.body}}
+        <p class="family-member-details__paragraph">{{this}}</p>
+      {{/each}}
+    </dl>
+  </div>
 </div>
