Add cover image

--- a/assets/styles/components/cover.styl
+++ b/assets/styles/components/cover.styl
@@ -5,7 +5,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: purple-darker;
+  background-image: url('cover.jpg');
+  background-size: cover;
 }
 
 .cover__inside-svg {
