--- a/assets/styles/components/header.styl
+++ b/assets/styles/components/header.styl
@@ -23,7 +23,7 @@
   @media (min-width: is_tablet) {
     display: inline-block;
   }
-  text-align: center;
+  text-align: right;
   margin-left: 100px;
   flex: 1 1 100%;
 }
