--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -21,9 +21,11 @@
         </svg>
       </div>
     </div>
-    <span class="orange-btn">KONTAKTA OSS</span>
+    <a href="mailto:{{mail}}">
+      <span class="orange-btn">KONTAKTA OSS</span>
+    </a>
   </div>
-  <div class="footer__bottom">
+  <footer id="contact" class="footer__bottom">
     <div class="contact">
       <div class="contact__logo"></div>
       <div class="contact__adress">{{adress}}</div>
@@ -46,5 +48,5 @@
         </a>
       </div>
     </div>
-  </div>
+  </footer>
 </div>
