--- a/views/partials/gallery.hbs
+++ b/views/partials/gallery.hbs
@@ -1,4 +1,4 @@
-<div class="gallery">
+<section id="gallery" class="gallery">
   <div class="gallery__images">
     <div class="gallery__overlay">
       <h2 class="gallery__overlay-text">{{text}}</h2>
@@ -9,4 +9,4 @@
       </div>
     {{/each}}
   </div>
-</div>
+</section>
