--- a/views/partials/one_of_us.hbs
+++ b/views/partials/one_of_us.hbs
@@ -1,4 +1,4 @@
-<div id="one_of_us" class="one-of-us">
+<section id="one_of_us" class="one-of-us">
   <div class="one-of-us__top">
     <div class="one-of-us__title">
       <div class="green-triangle"></div>
@@ -8,8 +8,8 @@
     <div class="one-of-us__body">{{body}}</div>
   </div>
   <div class="one-of-us__bottom">
-    <a href="http://www.google.se">
+    <a href="#contact">
       <span class="orange-btn">BLI EN AV OSS</span>
     </a>
   </div>
-</div>
+</section>
