changed style on header

--- a/assets/styles/components/header.styl
+++ b/assets/styles/components/header.styl
@@ -8,24 +8,14 @@
 }
 
 .header__wrapper {
-  padding: 0 100px;
   margin: 0 auto;
   display: flex;
 }
 
-.header__logo {
-  height: 100px;
-  width: 200px;
-}
-
 .header__nav {
-  display: none;
-  @media (min-width: is_tablet) {
-    display: inline-block;
-  }
   text-align: right;
-  margin-left: 100px;
   flex: 1 1 100%;
+  padding: 0 3.125%;
 }
 
 .header__link {
