Dotmenu fix. Arrow click fix

--- a/assets/styles/components/dotstyle-menu.styl
+++ b/assets/styles/components/dotstyle-menu.styl
@@ -86,4 +86,9 @@
 
 .dotstyle-menu--scrolled .dotstyle-menu__list-item a {
 	box-shadow: inset 0 0 0 2px rgba(purple-dark, 1);
+
+	&::after {
+		background-color: purple-dark;
+		box-shadow: 0 0 1px purple-dark;
+	}
 }
