--- a/views/partials/the_family.hbs
+++ b/views/partials/the_family.hbs
@@ -17,12 +17,12 @@
       </div>
     {{/each}}
   </div>
-  <div class="the-family__center-text">
-        <span id="show-all-arrow" class="arrow">
-            <span></span>
-            <span></span>
-            <span></span>
-        </span>
+  <div class="the-family__center-text" id="show-all-arrow">
+    <span class="arrow">
+      <span></span>
+      <span></span>
+      <span></span>
+    </span>
     <h4>SE ALLA {{the_family.members.length}}</h4>
   </div>
 </section>
