--- a/views/partials/one_of_us.hbs
+++ b/views/partials/one_of_us.hbs
@@ -9,7 +9,7 @@
   </div>
   <div class="one-of-us__bottom">
     <a href="#contact">
-      <span class="orange-btn">BLI EN AV OSS</span>
+      <span class="orange-btn">{{button}}</span>
     </a>
   </div>
 </section>
