--- a/views/partials/the_family.hbs
+++ b/views/partials/the_family.hbs
@@ -1,5 +1,5 @@
 <section id="family" class="the-family">
-  <h2 class="the-family__title">Hälsa på oss i familjen</h2>
+  <h2 class="the-family__title">{{the_family.title}}</h2>
   <div class="the-family-wrapper">
     {{#each the_family.members}}
       <div class="family-member">
