--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,7 +8,12 @@
     </nav>
     <div class="header__nav-wrapper">
       <div class="header__nav-icon ">
-        <span></span><span></span><span></span><span></span><span></span><span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
     </div>
   </div>
