Add subheading to cover

--- a/assets/styles/components/cover.styl
+++ b/assets/styles/components/cover.styl
@@ -8,6 +8,7 @@
   background-image: url('cover.jpg');
   background-size: cover;
   background-color: purple-darker;
+  color: white;
 
   padding: 15px;
   @media (min-width: is_tablet) {
