--- a/views/partials/cover.hbs
+++ b/views/partials/cover.hbs
@@ -4,6 +4,7 @@
 
   <img class="cover__alphadev-svg" src="/alphadev_logo_white.svg" alt="alphadev">
 
+  <h4>{{phonetic}}</h4>
   <p class="cover__subtext">
     {{text}}
   </p>
