Extract travel from footer

--- a/assets/styles/components/footer.styl
+++ b/assets/styles/components/footer.styl
@@ -19,7 +19,7 @@
   color: white;
 }
 
-.footer__title {
+.travel__title {
   max-width: 400px;
   display: inline-block;
   margin-bottom: 50px;
@@ -36,7 +36,7 @@
 	}
 }
 
-.footer__map {
+.travel__map {
   background-image: url("/europakarta.svg");
   background-repeat: no-repeat;
   width: 100%;
