--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,7 @@
 {{> cover cover }}
 {{> one_of_us one_of_us}}
-{{> the_family }}
+{{> the_family the_family }}
 {{> customers customers}}
 {{> gallery gallery}}
-{{> timeline }}
+{{> timeline timeline }}
+{{> travel travel }}
