--- a/views/partials/the_family.hbs
+++ b/views/partials/the_family.hbs
@@ -1,7 +1,7 @@
 <section id="family" class="the-family">
-  <h2 class="the-family__title">{{the_family.title}}</h2>
+  <h2 class="the-family__title">{{title}}</h2>
   <div class="the-family-wrapper">
-    {{#each the_family.members}}
+    {{#each members}}
       <div class="family-member">
         <div class="family-member__image-container">
           <div class="family-member__triangle"></div>
@@ -23,6 +23,6 @@
       <span></span>
       <span></span>
     </span>
-    <h4>SE ALLA {{the_family.members.length}}</h4>
+    <h4>SE ALLA {{members.length}}</h4>
   </div>
 </section>
