--- a/views/partials/timeline.hbs
+++ b/views/partials/timeline.hbs
@@ -1,7 +1,7 @@
 <section id="timeline" class="timeline">
-  <h2>{{timeline.title}}</h2>
+  <h2>{{title}}</h2>
   <ul class="timeline__items">
-    {{#each timeline.items}}
+    {{#each items}}
       <li>
         <h3>{{this.title}}</h3>
         <p>{{this.text}}</p>
