Revert arrow click fix (not sure what it fixed) to get it pointing straight again.

--- a/views/partials/the_family.hbs
+++ b/views/partials/the_family.hbs
@@ -17,8 +17,8 @@
       </div>
     {{/each}}
   </div>
-  <div class="the-family__center-text" id="show-all-arrow">
-    <span class="arrow">
+  <div class="the-family__center-text">
+    <span id="show-all-arrow" class="arrow">
       <span></span>
       <span></span>
       <span></span>
