--- a/assets/styles/components/customers.styl
+++ b/assets/styles/components/customers.styl
@@ -2,7 +2,6 @@
 .customers {
   padding: 60px 3.125%;
   background-image: url('/triangles/pattern_triangel_gron.svg');
-  background-position: top;
   background-repeat: no-repeat;
   background-position: 0 0;
 
@@ -16,7 +15,7 @@
   margin: 0 auto;
 }
 
-.customers H2 {
+.customers h2 {
   text-align: center;
 }
 
