--- a/assets/styles/components/footer.styl
+++ b/assets/styles/components/footer.styl
@@ -37,13 +37,13 @@
 }
 
 .travel__map {
-  background-image: url("/europakarta.svg");
+  background-image: url("/karta.png");
   background-repeat: no-repeat;
   width: 100%;
   padding-bottom: 92.32%;
   margin: 0 auto;
   position: relative;
-  background-size: 100%;
+  background-size: 90%;
 }
 
 .map-circle {
@@ -79,7 +79,7 @@
     @media (min-width: is_tablet) {
       transform: translate(-215px, 158px);
 	  }
-  }  
+  }
 }
 
 .contact {
@@ -153,7 +153,7 @@
 }
 
 circle {
-  stroke: orange; 
+  stroke: orange;
   fill: orange;
   stroke-width: 2px;
   stroke-opacity: 1;
