Fix for Member section and update adress in footer

--- a/assets/styles/components/the_family.styl
+++ b/assets/styles/components/the_family.styl
@@ -19,12 +19,15 @@
 .the-family-wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-content: space-between;
+  justify-content: space-between;
 
   margin: 0 20px;
   @media (min-width: is_tablet) {
     margin: 0 20px;
+  }
+
+  @media (min-width: is_desktop) {
+    margin: 0;
   }
 }
 
@@ -34,6 +37,7 @@ image-width = 150px;
   width: 200px;
   padding: 35px;
   position: relative;
+  cursor: pointer;
 
   @media (min-width: is_tablet) {
     width: 200px;
