Update with new pictures

--- a/assets/styles/components/the_family.styl
+++ b/assets/styles/components/the_family.styl
@@ -49,7 +49,7 @@ image-width = 150px;
     margin: 0 -30px;
   }
   &__image {
-    width: image-width;
+    //width: image-width;
     height: image-width;
   }
 
