Added join us section

--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -15,4 +15,5 @@
 @import "the_family.styl";
 @import "family_member.styl";
 @import "timeline.styl";
+@import "join_us.styl";
 @import "footer.styl";
