Added section class to join_us

--- a/views/partials/join_us.hbs
+++ b/views/partials/join_us.hbs
@@ -1,4 +1,4 @@
-<section id="join_us" class="join-us">
+<section id="join_us" class="join-us section">
     <h2 class="join-us__title">{{title}}</h2>
 
   <div class="join-us__content">
