--- a/views/partials/cover.hbs
+++ b/views/partials/cover.hbs
@@ -8,5 +8,5 @@
   <p class="cover__subtext">
     {{text}}
   </p>
-
+  <img id="cover-arrow" class="cover__arrow" src="/scrollpil.svg" alt="arrow">
 </section>
